k8s/20-users-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-db
  namespace: microdemo
spec:
  clusterIP: None
  ports:
    - port: 5432
      name: postgres
  selector:
    app: users-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: users-db
  namespace: microdemo
spec:
  serviceName: users-db
  replicas: 1
  selector:
    matchLabels:
      app: users-db
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["/bin/sh", "-c", "pg_isready -U users -d usersdb"]
            initialDelaySeconds: 10
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
