k8s/32-inventory.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: microdemo
  labels:
    app: inventory
    tier: backend
    app.kubernetes.io/name: inventory
    app.kubernetes.io/part-of: microdemo
    app.kubernetes.io/component: backend
spec:
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  selector:
    app: inventory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: microdemo
  labels:
    app: inventory
    tier: backend
    app.kubernetes.io/name: inventory
    app.kubernetes.io/part-of: microdemo
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
        tier: backend
        app.kubernetes.io/name: inventory
        app.kubernetes.io/part-of: microdemo
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: inventory
          image: microdemo-kb-inventory:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
