k8s/40-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: microdemo
  labels:
    app: web
    tier: frontend
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: microdemo
    app.kubernetes.io/component: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: microdemo
  labels:
    app: web
    tier: frontend
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: microdemo
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        tier: frontend
        app.kubernetes.io/name: web
        app.kubernetes.io/part-of: microdemo
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: web
          image: microdemo-kb-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
