k8s/50-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: microdemo
  labels:
    app: gateway
    tier: gateway
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: microdemo
    app.kubernetes.io/component: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
        tier: gateway
        app.kubernetes.io/name: gateway
        app.kubernetes.io/part-of: microdemo
        app.kubernetes.io/component: gateway
    spec:
      containers:
        - name: gateway
          image: nginx:1.27.3-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: nginx-config
          configMap:
            name: gateway-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: microdemo
  labels:
    app: gateway
    tier: gateway
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: microdemo
    app.kubernetes.io/component: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
